Explicitly release unused locals before a tail call.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 * Add explicit Release instructions to free values during normal flow
  - Make sure to release args as well as other locals in CompileExit.
- - Make sure to release unused locals for tail call.
-   Tail call should properly transfer ownership of all local args, analogous
+ - Tail call should properly transfer ownership of all local args, analogous
    to how RETURN transfers ownership of the result.
  - Avoid FbleReleaseValue calls in pop stack frame. It shouldn't be necessary
    anymore (except for abort case, which should use its own separate code to
