--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
+* Set up compilation spec tests.
 
-* Add 'abort' function to FbleExecutable for cleaning up the stack.
- - And use it to unwind frame by frame instead of whatever we do now.
+* Start using custom abort functions
+ - For PUT and GET values that do nothing.
+ - For FbleCode that use info stored in the current instruction.
+ - For generated code, that should use a custom generated function.
 * Track info necessary to know what to release on abort without checking if
   something is NULL or not.
 * Remove setting and checking of NULL on release to test that we don't rely on
@@ -12,9 +15,6 @@
 * Consider changing RELEASE_INSTR to take a vector of args to release?
   - Just to speed up interpreted code for the case where we are freeing a
     bunch of values in a row before returning or tail calling.
-
-* Consider adding a RETAIN instruction and using it to do the FbleRetainValue
-  calls on statics used in RETURN and TAIL_CALL?
 
 * Figure out how to get the profiling block I want around exec bindings?
  - I think the way it's setup, either we'll get no block in some cases, or
