Simplify logic for /Fblf/Heap/Equals%.
* Expand /Fblf/Heap/Tests%.
* Handle aborting programs in fble-stdio.c.

Unfortunately it's made it a bit slower, contrary to original intentions. I
think it's cleaner though, so I'll keep it.

fble bench interpreted: 6m30s ==> 6m41s
fble bench compiled:    4m53s ==> 4m59s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,6 @@
-* Implement a variation on Drawing that uses a stack of matrices
-  So that we only have to transform each point once, instead of multiple
-  times. With the hopes that it significantly improves performance?
-  For example, we draw an alien directly to where it needs to go on the screen
-  rather than draw a point around the center of the alien, translate it to
-  wherever the alien is in the game, and translate it again to wherever that
-  maps to on the screen.
+* [lang] Add some way to catch or recover from errors at runtime?
+* Print full stack trace on abort instead of just the top stack trace?
+* Optimize Sat simplification to avoid lots of repeated traversals?
 
 * Set up compilation spec tests.
 
