Implement custom abort function for interpreted code.
Which makes use of the instructions to know what things need to be freed
rather than make assumptions about what potential references exist where in
the stack frame.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,17 +1,21 @@
-* Link profiles in FbleLink instead of FbleCompile
- - So that we can reuse that same approach to support profiling in compiled
-   mode.
 
 * Start using custom abort functions
- - For FbleCode by phantom executing instructions.
  - For generated code, by phantom executing instructions.
 
 * Remove setting and checking of NULL on release to test that we don't rely on
   it. And maybe get a speed boost?
 
+* Link profiles in FbleLink instead of FbleCompile
+ - So that we can reuse that same approach to support profiling in compiled
+   mode.
+
 * After linking profiles in FbleLink, add support for profiling in compiled
   mode.
 
+* Better Usage messages for fble-test, fble-mem-test, and fble-stdio?
+  For the case when the fble program is compiled in instead of passed on the
+  command line.
+ 
 * Print full stack trace on abort instead of just the top stack trace?
 * Optimize Sat simplification to avoid lots of repeated traversals?
 
