Avoid setting unretained values on the stack to NULL.
Now that we track more precisely what values are live on the stack, there's no
need to explicitly set values to NULL after freeing them. The code is now much
less forgiving of any programming mistakes, but probably better to be forced
to fix those mistakes instead of allowing them to hide in the code.

This helps performance out a nice amount, except there were like 30 seconds in
fble bench lost somewhere between now and the previously reported numbers that
I don't understand.

fble bench interpreted: 6m58s ==> 6m31s
fble bench compiled:    5m26s ==> 4m55s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
-* Remove setting and checking of NULL on release to test that we don't rely on
-  it. And maybe get a speed boost?
+* Distinguish between runtime and compile time errors in spec tests.
+ - And make sure we run the runtime error tests in compilation mode.
 
 * Link profiles in FbleLink instead of FbleCompile
  - So that we can reuse that same approach to support profiling in compiled
