Set up compiled version of fble-profiles-test.
Currently disabled because it fails.

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@
  - Emit code to Sample at each instruction.
  - Consider putting the profiling code behind some CPP flag so it is easy to
    remove entirely when we compile the generated code.
+ - Set up a compiled version of the fble-profiles-test.
 
 * Better Usage messages for fble-test, fble-mem-test, and fble-stdio?
   For the case when the fble program is compiled in instead of passed on the
