--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,13 @@
 * Fix profiling issue.
- See thoughts/fble.profile.txt.
- - Add Enter/Exit calls to Get and Put value functions.
  - Move top level Enter/Exit calls into FbleExecutable profile_block CALL,
    TAIL_CALL, and EXIT instructions.
  - Remove AutoExit api from profiling API.
 
-* Can we get rid of special <root> profile block, now that we introduce a
-  <main> block in link that should cover everything?
+* Use some way other than NULL to disable profiling?
+ - To encourage all the apps to support optional profiling, including things
+   like fble-md5 and fble-app?
+ - Check we are passing meaningful block ids to FbleNewInputPortValue and
+   FbleNewOutputPortValue in all cases.
 
 * Add option for passing .so files to FbleMain.
 * Consider reorganizing 'langs' directory?
