Remove FbleProfileAutoExitBlock API.
It's a dangerous API because it makes the assumption that the block you are
auto-exiting into calls FbleProfileEnterBlock. Remove the API so we don't have
to worry about that problem. Users should use FbleProfileReplaceBlock instead.

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,7 @@
    FbleNewOutputPortValue in all cases.
 
 * Turn profiling ops into first class instructions?
+ - They could interfere with profile sampling in that case though?
 
 * Add option for passing .so files to FbleMain.
 * Consider reorganizing 'langs' directory?
